# notspot_ros2

./: README.md
champ_description/: package.xml
champ_description/urdf/: champ.urdf.xacro
notspot_controller/: package.xml  setup.cfg  setup.py
notspot_controller/config/: champ_controller.yaml  notspot_controller.yaml
notspot_controller/notspot_controller/: controller_champ.py  controller_quadruped.py
notspot_controller/notspot_controller/InverseKinematics/: robot_IK.py
notspot_controller/notspot_controller/RobotController/: CrawlGaitController.py  PIDController.py  RestController.py  RobotController.py  StandController.py  TrotGaitController.py
notspot_description/: CMakeLists.txt  package.xml
notspot_description/launch/: rviz_fake_joint.launch.py
notspot_description/urdf/: notspot.urdf.xacro
notspot_description/urdf/xacro/: gazebo.xacro  transmision.xacro
notspot_gazebo/: CMakeLists.txt  package.xml
notspot_gazebo/launch/: champ_gazebo.launch.py  controller.launch.py  gazebo.launch.py  notspot_gazebo.launch.py  spawn_champ.launch.py  spawn_notspot.launch.py
notspot_gazebo/plugins/: velodyne_plugin.cpp
notspot_gazebo/worlds/: normal.world  office.world
notspot_joystick/: package.xml  setup.cfg  setup.py
notspot_joystick/notspot_joystick/: keyboard_sim_joy.py  ramped_joystick.py
